# cart-api-example

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  make_virtual_env.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 18906c26295c_create_table_cupom.py  1c692720430e_create_user_table.py  1d900699334c_added_product_table.py  5607bc60977c_create_table_items.py  8ef21307c368_add_cart_table.py  b66546b79cf8_add_product_stock_control.py  db4e48bdb2ac_create_table_items.py
app/: main.py
app/database/: database_helper.py
app/helpers/: exceptions_helper.py
app/mock_services/: cupom_service.py  product_service.py
app/models/: __init__.py  cart_model.py  cupom_model.py  item_model.py  product_model.py  user_model.py
app/repository/: base_repository.py  cart_repository.py  cupom_repository.py  item_repository.py  product_repository.py  user_repository.py
app/routes/: cart.py  cupom.py  product.py  user.py
app/schemas/: cart_schemas.py  cupom_schemas.py  product_schemas.py  user_schemas.py
app/tests/: test_user.py
app/tests/integrations/: test_user.py
