[tool.poetry]
name = "cart-api-example"
version = "0.1.0"
description = "A cart api example using fast API and postgreSQL"
authors = ["Valdinei dos Santos <valdineidossantos@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
